--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
